--- a/enigma-front/src/components/showSettingsContainer/showSettingsStyle.css
+++ b/enigma-front/src/components/showSettingsContainer/showSettingsStyle.css
@@ -2,3 +2,12 @@
     -fx-border-color: black;
 
 }
+
+.rotorWindow{
+    -fx-border-color: black;
+    -fx-background-color: rgba(61, 61, 61, 0.9);
+    /*-fx-border-radius:15px;*/
+    /*-fx-background-radius:30px;*/
+    shade
+
+}
